# rmhd-gpu-with-shear

./: .README.md.swp  .gitignore  AGENTS.md  README.md  pyproject.toml
.spyproject/config/: workspace.ini
cases/: alfven_spec_full.input  s09_no_entropy.input
examples/: aw_packet.input  decay_spectra.input  decay_spectra_auto.input  decay_spectra_gpu.input  forced_turbulence.input  low_beta_stratified.input
examples/input_files/: alfven_wave_small.run  forced_turbulence_small.run
rmhdgpu/: auto_dissipation.py  config.py  example_setups.py  forcing.py  fourier_diagnostics.py  output.py  run.py  runfile.py  steppers.py
rmhdgpu.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
rmhdgpu/diagnostics/: __init__.py  budget.py  scalar.py  spectra.py
rmhdgpu/equations/: __init__.py  alfvenic.py  base.py  low_beta_stratified.py  s09.py
rmhdgpu/examples/: sanity_aw_packet.py  sanity_decay_spectra.py  sanity_forced_turbulence.py  sanity_single_mode_decay.py
rmhdgpu/initconds/: __init__.py  builtin.py  eigenmodes_low_beta_stratified.py  eigenmodes_s09.py  testing.py
rmhdgpu/profiling/: gpu_sanity.py  profile_alfvenic.py
rmhdgpu/tests/: alfvenic_timestep_convergence.csv  test_auto_dissipation.py  test_budget_diagnostics.py  test_budget_vis.py  test_diagnostic_output.py  test_dissipation.py  test_energy_normalization.py  (+19 more)
vis/: _matplotlib.py  aw_packet.py  decay_spectra.py  forced_turbulence.py  make_movie.py  plot_beats.py  plot_budget.py  plot_fullfield.py  plot_linear.py  plot_scalars.py  plot_spectra.py  plot_spectra_prl.py  plot_spectra_slope.py
(+1 files in other folders)
