[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rmhdgpu"
version = "0.1.0"
description = "Foundation for a single-GPU Fourier pseudo-spectral RMHD-style code."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.23",
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[tool.setuptools.packages.find]
include = ["rmhdgpu*"]

[tool.pytest.ini_options]
testpaths = ["rmhdgpu/tests"]
